--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chai-http": "^3.0.0",
     "express": "^4.14.0",
     "mocha": "^3.1.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "pg": "^6.1.0",
+    "sequelize": "^3.24.6"
   }
 }
